<resources>

    <string name="app_name">CarController v2.1</string>
    <string name="title">CarController_v2.2</string>
    <string name="title_activity_main">Car Controller</string>
    <string name="connect">Połącz</string>
    <string name="disconnect">Rozłącz</string>
    <string name="screen_selector1">Ace I</string>
    <string name="screen_selector2">Ace II</string>
    <string name="title_activity_select_device">Wybierz urządzenie</string>
    <string name="btnSelect">Wybierz</string>
    <string name="accelero_on">Włącz sensor położenia</string>
    <string name="accelero_off">Wyłącz sensor położenia</string>
    <string name="action_1">a</string>
    <string name="long_text">Log</string>
    <string name="action_2">b</string>
    <string name="action_3">c</string>
    <string name="screen_lock">Zablokuj wygaszacz</string>
    <string name="screen_unlock">Odblokuj wygaszacz</string>
    <string name="blank">...</string>

</resources>